# MMAN4020_TNSW_Robot

./: README.md
actuation_packages/ur5_candybar_pick_and_place/: CMakeLists.txt  package.xml
actuation_packages/ur5_candybar_pick_and_place/launch/: test_world.launch
actuation_packages/ur5_candybar_pick_and_place/src/: pick_and_place_cone.cpp
actuation_packages/ur5_candybar_pick_and_place/world/: test.world  test_world_truck.world
actuation_packages/ur5_candybar_pick_and_place/world/candybar_with_base/: model.config  model.sdf
actuation_packages/ur5_candybar_pick_and_place/world/spigot_hole/: model.config  model.sdf
actuation_packages/ur5_candybar_pick_and_place/world/test2/: model.sdf
actuation_packages/ur5_candybar_pick_and_place/world/truck_bed/: model.config  model.sdf
opencv_services/: CMakeLists.txt
opencv_services/src/: contours.cpp  ligma.cpp  template_matching.cpp
tf2_testgrounds/: CMakeLists.txt  package.xml
tf2_testgrounds/integration_testing/: ooi_locations.csv
tf2_testgrounds/launch/: tf2_nodes.launch
tf2_testgrounds/src/: data_associator.cpp  fake_client.cpp  fake_publisher.cpp  ooi_locations.txt  tf2_node.cpp
tf2_testgrounds/srv/: SendTarget.srv
ur5_tutorial_packages/common-sensors/common_sensors/urdf/sensors/: kinect.urdf.xacro
ur5_tutorial_packages/universal_robot/ur_description/urdf/: ur3_joint_limited_robot.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro
ur5_tutorial_packages/ur5_gripper_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  ros_controllers.launch
